<resources>
    <string name="app_name">爱估车</string>
    <string name="more_data">加载更多</string>
    <string name="load_more">加载更多</string>
    <string name="pull_to_refresh_pull_label">松开刷新</string>
    <string name="pull_to_refresh_refresh_lasttime">最近更新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新完成</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载完成</string>
    <string name="load_fail">加载失败</string>
    <string name="app_protocol">我同意平台佣金服务协议</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--mine 我的-->
    <string name="mine">我的</string>
    <string name="mine_detail">个人信息</string>
    <string name="mine_detail_upload_head">上传头像</string>
    <string name="mine_gjs_upload_zs">上传评估师证书</string>
    <string name="mine_detail_name">姓名</string>
    <string name="mine_detail_education">学历</string>
    <string name="mine_detail_sex">性别</string>
    <string name="mine_detail_age">年龄</string>
    <string name="mine_d_sex_male">男</string>
    <string name="mine_d_sex_female">女</string>
    <string name="mine_d_sex_normal">不限</string>
    <string name="mine_detail_birthday">出生年月</string>
    <string name="mine_detail_city">所在城市</string>
    <string name="mine_detail_mobilephone">手机号</string>
    <string name="mine_detail_hnit">必填</string>
    <string name="mine_news">消息</string>
    <string name="mine_account">账户中心</string>
    <string name="mine_estimator_title">估价师</string>
    <string name="mine_estimator_authentication">申请成为估价师认证</string>
    <string name="mine_estimator_apply">估价师认证</string>
    <string name="mine_estimator_level">估价师等级</string>
    <string name="mine_estimator_experience">经验年限</string>
    <string name="mine_estimator_center">估价师个人中心</string>
    <string name="mine_current_orders">当前订单</string>
    <string name="mine_history_orders">历史订单</string>
    <string name="mine_orders_mine">我的服务</string>
    <string name="mine_rec_orders">接单</string>
    <string name="mine_gjs_release_cartype">车型</string>
    <string name="mine_gjs_release_carprice">价格</string>
    <string name="mine_gjs_release_des">服务描述</string>
    <string name="mine_gjs_re_hint_s_cartype">请选择车型</string>
    <string name="mine_gjs_re_hint_s_carprice">元/次</string>
    <string name="mine_password">修改密码</string>
    <string name="mine_find_password">找回密码</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_opinion">意见反馈</string>
    <string name="mine_setup">设置</string>
    <string name="mine_protocol">用户协议</string>
    <string name="mine_version">版本更新</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_lovecar">爱车</string>
    <string name="mine_order">订单</string>
    <string name="mine_order_pj">评价</string>
    <string name="mine_o_pj_fwtd">服务态度</string>
    <string name="mine_o_pj_fwpj">服务评价</string>
    <string name="mine_zx">资讯</string>
    <string name="mine_xc">选车</string>
    <string name="mine_focused">关注</string>
    <string name="mine_collected">收藏</string>
    <string name="mine_mobile_number">手机号</string>
    <string name="mine_mobile_code">验证码</string>
    <string name="mine_mobile_old_pass">原密码</string>
    <string name="mine_mobile_new_pass">新密码</string>
    <string name="mine_mobile_cnew_pass">确认密码</string>
    <string name="mine_password_differentce">两次输入密码不一致</string>
    <string name="mine_password_old_error">原密码输入错误</string>
    <string name="mine_hint_password_length">密码长度不能小于6位数</string>
    <string name="mine_hint_npassword_length">新密码长度不能小于6位数</string>
    <string name="mine_hint_mobile">请输入您的手机号</string>
    <string name="mine_hint_rname">请输入真实姓名</string>
    <string name="mine_hint_education">请选择学历</string>
    <string name="mine_hint_gjs_level">请选择估价师等级</string>
    <string name="mine_hint_gjs_experience">请选择经验年限</string>
    <string name="mine_hint_gjs_cartype">请选择车型</string>
    <string name="mine_hint_mobile_error">手机格式不正确</string>
    <string name="mine_hint_code">请输入验证码</string>
    <string name="mine_hint_code_error">输入验证码有误,请一分钟后重新获取!</string>
    <string name="mine_hint_cartip">注册即代表同意爱车评估申明</string>
    <string name="mine_hint_old_pass">请输入原密码</string>
    <string name="mine_get_code">获取验证码</string>
    <string name="mine_hint_new_pass">请设置新的密码</string>
    <string name="mine_hint_c_new_pass">请确认新的密码</string>
    <string name="mine_hint_n_pass_diff">新的密码和确认密码不一致</string>
    <string name="mine_mobile_password">新密码</string>
    <string name="mine_mobile_password_confirm">确认新密码</string>
    <string name="mine_trade_record">交易记录</string>
    <string name="mine_history_pg">历史评估</string>
    <string name="mine_pg_report">评估报告</string>
    <string name="mine_txjl">提现记录</string>
    <string name="mine_message_center">消息中心</string>
    <string name="mine_message_personal">个人消息</string>
    <string name="mine_message_system">系统消息</string>
    <string name="mine_version_update">版本更新</string>
    <string name="mine_recommend_friend">推荐给好友</string>
    <string name="mine_wechat_friend">微信好友</string>
    <string name="mine_qq_friend">QQ好友</string>
    <string name="mine_opinion_phone">联系电话:</string>
    <string name="mine_hint_phone">选填，便于我们联系您</string>
    <string name="mine_hint_opinion">请输入遇到的问题和建议</string>
    <string name="mine_hint_username">请输入用户名</string>
    <string name="mine_hint_password">请输入密码</string>
    <string name="mine_toast_name">请输入您的姓名!</string>
    <string name="mine_toast_sex">请选择您的性别!</string>
    <string name="mine_toast_birthday">请选择您的出生年月!</string>
    <string name="mine_toast_city">请选择您所在城市!</string>
    <string name="mine_read">我已阅读并同意</string>
    <string name="mine_user_pro">《用户协议》</string>
    <string name="mine_forget_pass">忘记密码?</string>
    <string name="mine_login_third">使用其他账号登录</string>
    <string name="mine_go_register">还没有账号？去注册</string>
    <string name="mine_balance">账户余额</string>
    <string name="mine_withdraw_cash">去提现</string>
    <string name="mine_withdraw_in">收入记录</string>
    <string name="mine_withdraw_out">支出记录</string>
    <string name="mine_withdraw_tx">提现记录</string>
    <string name="mine_gjs_checking">平台正在审核中,我们将尽快给您反馈结果!</string>
    <string name="mine_gjs_cartype">请选择车型</string>
    <string name="mine_gjs_carprice">请输入价格</string>
    <string name="mine_gjs_cardes">请输入服务描述</string>
    <string name="mine_gjs_caragree">请选中“我同意平台佣金服务协议”</string>

    <!--车友圈-->
    <string name="car_circle_minetz">我的帖子</string>
    <string name="car_circle_minehf">我的回复</string>
    <string name="car_friend_minehy">我的好友</string>
    <string name="car_friend_fjcy">附近车友</string>
    <string name="car_friend_fjcy_hint">离我最近</string>
    <string name="car_cyq_addfriend_title">添加好友</string>
    <string name="car_cyq_addfriend_tj">为你推荐</string>
    <string name="car_cyq_af_filter_d">距离</string>
    <string name="car_cyq_af_filter_type">身份</string>

    <!--公共操作-->
    <string name="operation_add">添加</string>
    <string name="operation_verify">审核</string>
    <string name="operation_search">搜索</string>
    <string name="operation_edit">编辑</string>
    <string name="operation_delete">删除</string>
    <string name="operation_save">保存</string>
    <string name="operation_submit">提交</string>
    <string name="operation_submit_pl">提交评论</string>
    <string name="operation_ok">确定</string>
    <string name="operation_accept">接受</string>
    <string name="operation_know">我知道了</string>
    <string name="operation_confirm">确认</string>
    <string name="operation_cancel">取消</string>
    <string name="operation_refuse">拒绝</string>
    <string name="operation_cancelfocus">取消关注</string>
    <string name="operation_take_camera">拍照</string>
    <string name="operation_take_photo">图片</string>
    <string name="operation_tip">提示</string>
    <string name="op_tip_save">确定不保存退出吗？</string>
    <string name="operation_back">返回</string>
    <string name="operation_previous">上一步</string>
    <string name="operation_next">下一步</string>
    <string name="operation_finished">完成</string>
    <string name="operation_register">注册</string>
    <string name="operation_concern">关注</string>
    <string name="operation_modity">修改</string>
    <string name="operation_collection">收藏</string>
    <string name="operation_con_modify">确认修改</string>
    <string name="operation_release_services">发布服务</string>
    <string name="operation_add_services">添加服务</string>
    <string name="operation_account_detail">账户明细</string>
    <string name="operation_news">消息</string>
    <string name="operation_login">登录</string>
    <string name="operation_forget_password">忘记密码</string>
    <string name="operation_setup_password">设置密码</string>
    <string name="operation_go_register">还没有账号？去注册</string>
    <string name="operation_sdcard_inenough">获取失败，请稍后重新尝试!</string>
    <string name="op_permission_title">权限提示</string>
    <string name="op_permission_con_camera">使用相机需要获取访问权限，现在开启？</string>
    <string name="op_permission_con_loc">使用定位需要获取访问权限，现在开启？</string>
    <string name="op_permission_rfile">发送照片需要开启读取文件的权限</string>
    <string name="op_permission_loc">定位需要开启读取文件的权限</string>
    <string name="op_title_photo">获取图片</string>
    <string name="op_title_sex">选择性别</string>
    <string name="op_cancel_focus">您将取消去%s的关注</string>
    <string name="op_add_to_friend">您将添加%s为好友</string>
    <string name="op_gj_times">已经估价%s次</string>
    <string name="op_gjs_apply_error">错误描述：%s</string>
    <string name="op_gjs_server_giveup">您确认放弃发布服务？</string>
    <string name="op_gj_times_end">次</string>
    <string name="op_licensetime">上牌时间</string>
    <string name="op_nozw">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="op_bd_net_diff">网络不同导致定位失败，请检查网络是否通畅</string>
    <string name="op_bd_net_fxms">无法获取有效定位依据导致定位失败，一般是由于手机的原因，处于飞行模式下一般会造成这种结果，可以试着重启手机</string>
    <string name="operation_registering">正在注册……</string>
    <string name="operation_loading">正在登陆……</string>
    <string name="operation_adding">正在添加……</string>
    <string name="operation_focusing">正在获取关注列表</string>
    <string name="operation_collecting">正在获取收藏列表</string>
    <string name="operation_lovecaring">正在获取爱车列表</string>
    <string name="operation_friending">正在获取好友列表</string>
    <string name="operation_addfriending">正在添加好友……</string>
    <string name="operation_setup_pwding">正在设置新密码……</string>
    <string name="operation_passwording">正在修改密码……</string>
    <string name="operation_submitting">正在提交……</string>
    <string name="operation_upgrade_title">有新版本是否升级？</string>
    <string name="operation_upgrade_error">系统或者网络不给力呀,歇着吧!</string>
    <string name="operation_upgrade_dialog">正在下载最新APP，请稍候...</string>
    <string name="cv_progress_dialog_title">正在下载最新APP，请稍候...</string>
    <string name="cv_task_canceled">取消下载</string>
    <string name="cv_download_fault">下载</string>
    <string name="operation_confirm_exit">确定退出爱车估价吗？</string>
    <string name="operation_tip_datanull">暂无符合条件的数据</string>

</resources>
