<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/com_title_height">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onBackClick"
            android:padding="@dimen/com_left_right"
            android:src="@mipmap/nav_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mine_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_34px" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/com_line_bg" />

    <LinearLayout
        android:id="@+id/llOldPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_100px"
        android:background="@drawable/selector_bg_listitem1"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/com_left_right">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_mobile_old_pass"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/padding_5"
            android:layout_marginRight="@dimen/com_left_right"
            android:layout_marginTop="@dimen/padding_5"
            android:background="@color/com_line_bg" />

        <EditText
            android:id="@+id/tvOldPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:digits="@string/op_nozw"
            android:hint="@string/mine_hint_old_pass"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/com_line_bg" />

    <LinearLayout
        android:id="@+id/llNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_100px"
        android:background="@drawable/selector_bg_listitem1"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/com_left_right">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_mobile_new_pass"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/padding_5"
            android:layout_marginRight="@dimen/com_left_right"
            android:layout_marginTop="@dimen/padding_5"
            android:background="@color/com_line_bg" />

        <EditText
            android:id="@+id/tvNewPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:digits="@string/op_nozw"
            android:hint="@string/mine_hint_new_pass"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/com_line_bg" />

    <LinearLayout
        android:id="@+id/llCNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_100px"
        android:background="@drawable/selector_bg_listitem1"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/com_left_right">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine_mobile_cnew_pass"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/padding_5"
            android:layout_marginRight="@dimen/com_left_right"
            android:layout_marginTop="@dimen/padding_5"
            android:background="@color/com_line_bg" />

        <EditText
            android:id="@+id/tvCNewPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:digits="@string/op_nozw"
            android:hint="@string/mine_hint_c_new_pass"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_90px"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/selector_color_orange"
        android:onClick="onConfirmModify"
        android:textColor="@color/white"
        android:text="@string/operation_con_modify" />
</LinearLayout>