<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/com_title_height">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onBackClick"
            android:padding="@dimen/com_left_right"
            android:src="@mipmap/nav_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mine_opinion"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_34px" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/com_line_bg" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_300px"
        android:background="@drawable/shape_border_bg"
        android:gravity="top"
        android:hint="@string/mine_hint_opinion"
        android:maxLength="100"
        android:padding="@dimen/com_left_right"
        android:textSize="@dimen/sp_32px" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="0/100"
        android:textColor="@color/text_3333"
        android:textSize="@dimen/sp_30px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/com_left_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_80px"
            android:gravity="center"
            android:text="@string/mine_opinion_phone"
            android:textColor="@color/text_3333"
            android:textSize="@dimen/sp_30px" />

        <EditText
            android:id="@+id/etMobilephone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_80px"
            android:background="@drawable/shape_border_bg"
            android:paddingLeft="@dimen/com_left_right"
            android:inputType="number"
            android:hint="@string/mine_hint_phone"
            android:textSize="@dimen/sp_28px" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_100px"
        android:background="@drawable/selector_color_orange"
        android:onClick="onSubmitClick"
        android:textColor="@color/white"
        android:text="@string/operation_submit" />
</LinearLayout>